<resources>
    <string name="by_signing_up_i_agree_to_the_privacy_policy_and_terms_and_conditions">
        By signing up, I agree to the Privacy Policy and Terms and Conditions
    </string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="sign_in">Sign In</string>
    <string name="join_now">Join Now</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Location</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_linkedin">Continue with LinkedIn</string>
    <string name="have_an_account_sign_in_instead">Have an account? Sign in instead</string>
    <string name="don_t_have_an_account_join_now_instead">Don’t have an account? Join now instead</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="email_empty">Email cannot be Empty</string>
    <string name="email_invalid">Please Enter a Valid Email Address</string>
    <string name="password_empty">Password cannot be Empty</string>
    <string name="signingin">Signing In...</string>
    <string name="loggedin">Logged In...</string>
    <string name="donations">Donations</string>
    <string name="information">Information</string>
    <string name="other_help">Other Help</string>
    <string name="com_auth0_client_id">J2pJ9iZ0cJzI0lqJ2h3tdLlqVPO2sGMM</string>
    <string name="com_auth0_domain">fightpandemics.eu.auth0.com</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="please_check_your_email">We have just sent you email, please click the link to confirm your account and complete your profile.\n\nIf you don\'t see a message within a few minutes please check spam, promotions or other incoming mail folders.</string>
    <string name="if_you_dont_see_email">If you don\'t see a message within a few minutes please check spam, promotions or other incoming mail folders.</string>
    <string name="check_your_inbox">Check your inbox</string>
    <string name="unexpected_error_login">Unexpected error, try again later</string>
    <string name="verify_email">Verify Email</string>
    <string name="go_sign_in">Go to Sign in</string>

    <!-- complete profile location -->
    <string name="zip_code_neighborhood_or_city">Zip code, neighborhood or city</string>
    <string name="share_my_location">Share my location</string>
</resources>