<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorWhite"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/sign_up_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_sign_up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/signup_screen_bg"
        android:paddingStart="31dp"
        android:paddingEnd="30dp"
        android:paddingTop="34dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:textColor="@color/fightPandemicsNeonBlue"
            android:lineSpacingExtra="3.7sp"
            android:fontFamily="@font/worksans_medium"
            android:textColorHint="@color/fightPandemicsNeonBlue"
            android:hint="@string/e_mail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/textview_line_bottom"
            android:inputType="textEmailAddress"

            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:textColor="@color/fightPandemicsNeonBlue"
            android:lineSpacingExtra="3.7sp"
            android:fontFamily="@font/worksans_medium"
            android:textColorHint="@color/fightPandemicsNeonBlue"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            android:layout_marginTop="34dp"
            android:background="@drawable/textview_line_bottom"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:textColor="@color/fightPandemicsNeonBlue"
            android:lineSpacingExtra="3.7sp"
            android:fontFamily="@font/worksans_medium"
            android:hint="@string/re_enter_password"
            android:textColorHint="@color/fightPandemicsNeonBlue"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            android:layout_marginTop="34dp"
            android:background="@drawable/textview_line_bottom"
            android:inputType="textPassword"
            />

        <TextView
            style="@style/AndroidNativeP311Px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_i_agree_to_the_privacy_policy_and_terms_and_conditions"
            app:layout_constraintTop_toBottomOf="@id/et_repassword"
            app:layout_constraintStart_toStartOf="@id/et_repassword"
            android:layout_marginTop="20dp"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/btn_sign_email_background"
            android:backgroundTint="@color/color_botton_disabled"
            app:layout_constraintBottom_toTopOf="@id/tv_sigin_instead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/color_white"
                android:lineSpacingExtra="5.9sp"
                android:text="@string/join_now"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_sigin_instead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/fightPandemicsNeonBlue"
            android:lineSpacingExtra="4.9sp"
            android:text="@string/have_an_account_sign_in_instead"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>