<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signup_screen_bg"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/verify_email_toolbar"
        layout="@layout/sign_in_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/check_your_inbox"
        style="@style/AndroidNativeH122Px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/verify_email_toolbar"
        app:layout_constraintBottom_toTopOf="@id/check_your_email"

        android:text="@string/check_your_inbox"/>

    <TextView
        android:id="@+id/check_your_email"
        style="@style/AndroidNativeH216Px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:text="@string/please_check_your_email"
        app:layout_constraintBottom_toTopOf="@+id/btn_verify_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_your_inbox"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify_email"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_sign_email_background"
        android:fontFamily="@font/poppins_medium"
        android:lineSpacingExtra="5.9sp"
        android:text="@string/continue_with_email"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>