<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signup_screen_bg"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/complete_profile_toolbar"
        layout="@layout/complete_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_firstname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/fightPandemicsNeonBlue"
        app:boxBackgroundMode="none"
        app:errorEnabled="false"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/SignUPTextHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/complete_profile_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_line_bottom"
            android:inputType="text"
            android:paddingStart="2dp"
            android:paddingTop="8dp"
            android:textAppearance="@style/SignUPText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_lastname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/fightPandemicsNeonBlue"
        app:boxBackgroundMode="none"
        app:errorEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/SignUPTextHint"
        app:layout_constraintStart_toStartOf="@id/et_firstname_layout"
        app:layout_constraintTop_toBottomOf="@id/et_firstname_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_line_bottom"
            android:inputType="text"
            android:paddingStart="2dp"
            android:paddingTop="8dp"
            android:textAppearance="@style/SignUPText"
            app:endIconDrawable="@drawable/ic_eye_toogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/address"
        android:textColorHint="@color/fightPandemicsNeonBlue"
        app:boxBackgroundMode="none"
        app:errorEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/SignUPTextHint"
        app:layout_constraintStart_toStartOf="@id/et_lastname_layout"
        app:layout_constraintTop_toBottomOf="@id/et_lastname_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_line_bottom"
            android:inputType="text"
            android:paddingStart="2dp"
            android:paddingTop="8dp"
            android:textAppearance="@style/SignUPText"
            app:endIconDrawable="@drawable/ic_eye_toogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="I am here to offer:"
        android:textColor="@color/fightPandemicsNeonBlue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_address_layout" />

    <TextView
        style="@style/AndroidNativeP311Px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="Optional"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clBtnComplete"
        style="@style/MaterialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_sign_email_background"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/complete_profile"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/tv_sigin_instead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sigin_instead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:lineSpacingExtra="20.9sp"
        android:text="@string/have_an_account_sign_in_instead"
        android:textColor="@color/fightPandemicsNeonBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>